Formulario contactanos terminado

--- a/PreEntrega1+Romero Osmi/style.css
+++ b/PreEntrega1+Romero Osmi/style.css
@@ -12,21 +12,15 @@ elemento {
 
 html {
     height: 100%;
-
 }
-
 body {
     display: flex;
     flex-direction: column;
     min-height: 100%;
 }
-
 footer {
     margin-top: auto;
 }
-
-
-
 .textoHeader {
 
     background-color: #f6d6d6;
@@ -34,8 +28,6 @@ footer {
     justify-content: center;
     padding: 8px;
 }
-
-
 .titulo-linea-1 {
     width: 100%;
     color: white;
@@ -45,8 +37,6 @@ footer {
     font-weight: lighter;
     font-family: "Montserrat";
     text-shadow: #474747 2px 2px 2px, 2px 2px 5px rgba(206, 89, 55, 0);
-
-
 }
 
 .navegador {
@@ -125,16 +115,10 @@ footer {
 
 
 
-
-
-
-
-
-
 .imagenfondo {
     background-image: url(https://m.media-amazon.com/images/I/911AbMaFIoL.jpg);
     width: 100%;
-    height: 100px;
+    height: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -254,58 +238,63 @@ footer {
 
 }
 
+/* formulario contactanos*/
+
 .formulario-contactanos {
-    color: #c69c6d;
-    font-size: 17px;
-    font-family: Montserrat;
-    background-color: #ffffff;
-    padding: 10px;
-    margin: 10px auto;
-    border-radius: 10px;
-    width: 600px;
-    max-width: 100%;
-    text-align: center;
+background-color: #c69c6d;
+width: 350px;
+margin: 20px auto 20px auto;
+padding: 20px;
+border-radius: 5px;
+font-family: "Montserrat";
 }
 
-.formulario-contactanos textarea[name="requerimiento"] {
-    resize: none;
-    height: 150px;
+.formulario-contactanos-grupo {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: 10px 0px;
+}
+.formulario-contactanos-grupo-label {
+    color: white;
+
+}
+.formulario-contactanos-grupo-input{
+    background-color: transparent;
+    border: 1px solid white;
+    padding: 5px 10px;
     border-radius: 5px;
+    width: 100%;
 }
 
-.formulario-contactanos button[type="submit"] {
-    background-color: #b6d6d6;
+.formulario-contactanos-grupo-input::placeholder{
+    color: white
+    
+}
+
+.formulario-contactanos-boton {
+    width: 100%;
+    background-color: white;
     color: #c69c6d;
-    border: none;
+    border: 1px solid white;
     border-radius: 5px;
-    padding: 10px 20px;
-    font-size: 14px;
-    cursor: pointer;
-    margin-top: 10px;
+    padding: 10px 5px;
 }
-
-.formulario-contactanos label {
-    margin-bottom: 10px;
-    margin-top: 10px;
-    display: block;
-}
-
 .formulario-contactanos label.terminos {
     display: flex;
     align-items: center;
     width: 100%;
     justify-content: center;
     margin-top: 20px;
+    color: white;
 }
 
 .formulario-contactanos label.terminos input[type="checkbox"] {
     margin-right: 10px;
+    border-radius: 5px;
+    background-color: transparent;
+    border: 1px solid white;
 }
-
-
-
-
-
 
 .contenidoNosotros {
     width: 100%;
