--- a/PreEntrega1+Romero Osmi/style.css
+++ b/PreEntrega1+Romero Osmi/style.css
@@ -3,585 +3,504 @@ elemento {
     propiedad: valor; 
 }
 */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 * {
-    margin: 0px;
-    box-sizing: border-box;
+  margin: 0px;
+  box-sizing: border-box;
 }
 
 html {
-    height: 100%;
+  height: 100%;
 }
-body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-}
-footer {
-    margin-top: auto;
-}
-.textoHeader {
 
-    background-color: #f6d6d6;
-    display: flex;
-    justify-content: center;
-    padding: 8px;
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
+
+footer {
+  margin-top: auto;
+}
+
+.textoHeader {
+  background-color: #f6d6d6;
+  display: flex;
+  justify-content: center;
+  padding: 8px;
+}
+
 .titulo-linea-1 {
-    width: 100%;
-    color: white;
-    font-size: 18px;
-    background-color: #f6d6d6;
-    text-align: center;
-    font-weight: lighter;
-    font-family: "Montserrat";
-    text-shadow: #474747 2px 2px 2px, 2px 2px 5px rgba(206, 89, 55, 0);
+  width: 100%;
+  color: white;
+  font-size: 18px;
+  background-color: #f6d6d6;
+  text-align: center;
+  font-weight: lighter;
+  font-family: "Montserrat";
+  text-shadow: #474747 2px 2px 2px, 2px 2px 5px rgba(206, 89, 55, 0);
 }
 
 .navegador {
-    width: 100%;
-    display: flex;
-    background-color: #f6d6d6;
-
+  width: 100%;
+  display: flex;
+  background-color: #f6d6d6;
 }
 
 .navegador-links {
-    list-style: none;
-    color: white;
-    font-size: 17px;
-    background-color: #f6d6d6;
-    font-family: "Montserrat";
-    background-color: #f6d6d6;
-    display: flex;
-    justify-content: left;
-    padding: 5px;
+  list-style: none;
+  color: white;
+  font-size: 17px;
+  background-color: #f6d6d6;
+  font-family: "Montserrat";
+  background-color: #f6d6d6;
+  display: flex;
+  justify-content: left;
+  padding: 5px;
 }
 
 .navegador-link {
-
-    padding: 1px;
-
+  padding: 1px;
 }
-
 .navegador-link a {
-    display: block;
-    padding: 5px;
-    text-decoration: none;
-    color: gray;
-
-
+  display: block;
+  padding: 5px;
+  text-decoration: none;
+  color: gray;
 }
 
 .redes1 {
-    width: 100%;
-    height: auto;
-    background-color: #f6d6d6;
-    text-align: right;
-
+  width: 100%;
+  height: auto;
+  background-color: #f6d6d6;
+  text-align: right;
 }
 
 .redes {
-    width: 30px;
-    height: auto;
-    background-color: #f6d6d6;
-    padding: 2px;
-    margin: 10px;
+  width: 30px;
+  height: auto;
+  background-color: #f6d6d6;
+  padding: 2px;
+  margin: 10px;
 }
 
-
 .logoCentral {
-    width: 100%;
-    border: gray;
-
+  width: 100%;
+  border: gray;
 }
 
 .logo {
-    width: 300px;
-    height: auto;
-
+  width: 300px;
+  height: auto;
 }
 
 .navegador-links2 {
-    list-style: none;
-    color: white;
-    font-size: 17px;
-    background-color: #f6d6d6;
-    font-family: "Montserrat";
-    background-color: #f6d6d6;
-    display: flex;
-    justify-content: center;
+  list-style: none;
+  color: white;
+  font-size: 17px;
+  background-color: #f6d6d6;
+  font-family: "Montserrat";
+  background-color: #f6d6d6;
+  display: flex;
+  justify-content: center;
 }
 
-
-
 .imagenfondo {
-    background-image: url(https://m.media-amazon.com/images/I/911AbMaFIoL.jpg);
-    width: 100%;
-    height: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    object-fit: cover;
-
+  background-image: url(https://m.media-amazon.com/images/I/911AbMaFIoL.jpg);
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  -o-object-fit: cover;
+  object-fit: cover;
 }
 
 .bajada {
-    color: gray;
-    font-size: 18px;
-    text-align: center;
-    font-family: Montserrat;
-    background-color: #f6d6d6;
-    padding: 5px;
-
+  color: gray;
+  font-size: 18px;
+  text-align: center;
+  font-family: Montserrat;
+  background-color: #f6d6d6;
+  padding: 5px;
 }
-
-
-
 
 .imagenes {
-    display: flex;
-    justify-content: center;
-    padding: 0;
-    flex-wrap: wrap;
-    gap: 40px;
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  flex-wrap: wrap;
+  gap: 40px;
 }
-
 .imagenes div {
-    margin-top: 30px;
-    margin-bottom: 30px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
-
-
-
-
 
 .novedadesybebe {
-    width: 100%;
-    height: 400px;
-    background-color: white;
-    display: flex;
-    justify-content: center;
+  width: 100%;
+  height: 400px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
 }
-
-
-
 
 .titulo3 {
-    color: gray;
-    font-size: 18px;
-    text-align: center;
-    font-family: Montserrat;
-    margin: 10px;
-    display: flex;
-    justify-content: center;
-
-
+  color: gray;
+  font-size: 18px;
+  text-align: center;
+  font-family: Montserrat;
+  margin: 10px;
+  display: flex;
+  justify-content: center;
 }
-
-
-
 
 .footer {
-    color: gray;
-    font-size: 14px;
-    text-align: center;
-    font-family: Montserrat;
-    background-color: #f6d6d6;
-    padding: 25px 10px 5px 10px;
+  color: gray;
+  font-size: 14px;
+  text-align: center;
+  font-family: Montserrat;
+  background-color: #f6d6d6;
+  padding: 25px 10px 5px 10px;
 }
 
-
 .formFooter {
-    width: 390px;
-    margin: 10px auto 10px auto;
-    padding: 10px 10px 10px 10px;
-    font-family: "Montserrat";
+  width: 390px;
+  margin: 10px auto 10px auto;
+  padding: 10px 10px 10px 10px;
+  font-family: "Montserrat";
 }
 
 .formFooter-grupo {
-    display: flex;
-    flex-direction: column;
-    gap: 3px;
-    font-size: 16px;
-
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+  font-size: 16px;
 }
-
 
 .formFooter-label {
-    padding: 5px 10px 10px 10px;
-
-  
+  padding: 5px 10px 10px 10px;
 }
 
- .formFooter-input {
-    background-color: transparent;
-    border: 1px solid white;
-    padding: 5px 10px;
-    border-radius: 8px;
-    width: 100%;
-    transition: 0.5s;
- }
-
-
- .formFooter-input::placeholder {
-   text-align: center;
- }
-
-
- .formFooter-input:focus {
-    border: 2px solid white;
-    outline: none;
-  }
+.formFooter-input {
+  background-color: transparent;
+  border: 1px solid white;
+  padding: 5px 10px;
+  border-radius: 8px;
+  width: 100%;
+  transition: 0.5s;
+}
+.formFooter-input::-moz-placeholder {
+  text-align: center;
+}
+.formFooter-input::placeholder {
+  text-align: center;
+}
+.formFooter-input:focus {
+  border: 2px solid white;
+  outline: none;
+}
 
 .footerText {
-    font-size: 15px;
+  font-size: 15px;
 }
 
 .contenidoContactanos {
-    display: block;
-    justify-content: center;
+  display: block;
+  justify-content: center;
 }
 
 .tituloContactanos {
-    padding: 30px 20px 10px 20px;
-    color: #c69c6d;
-    font-size: 20px;
-    text-align: center;
-    font-family: Montserrat;
+  padding: 30px 20px 10px 20px;
+  color: #c69c6d;
+  font-size: 20px;
+  text-align: center;
+  font-family: Montserrat;
 }
+
 .bajada-landings-contactanos {
-    color: #c69c6d;
-    font-size: 18px;
-    font-family: Montserrat;
-    background-color: white;
-    padding: 10px 200px 30px 200px;
-    text-align: center;
-    max-width: 100%;
+  color: #c69c6d;
+  font-size: 18px;
+  font-family: Montserrat;
+  background-color: white;
+  padding: 10px 200px 30px 200px;
+  text-align: center;
+  max-width: 100%;
 }
 
 /* formulario contactanos*/
-
 .formulario-contactanos {
-background-color: #c69c6d;
-width: 390px;
-margin: 20px auto 40px auto;
-padding: 30px;
-border-radius: 4px;
-font-family: "Montserrat";
+  background-color: #c69c6d;
+  width: 390px;
+  margin: 20px auto 40px auto;
+  padding: 30px;
+  border-radius: 4px;
+  font-family: "Montserrat";
+}
+.formulario-contactanos label.terminos {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
+  margin-top: 20px;
+  color: white;
+}
+.formulario-contactanos label.terminos input[type=checkbox] {
+  margin-right: 10px;
+  border-radius: 5px;
+  background-color: transparent;
+  border: 1px solid white;
 }
 
 .formulario-contactanos-grupo {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin: 10px 0px;
-    font-size: 18px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin: 10px 0px;
+  font-size: 18px;
 }
 
 .formulario-contactanos-grupo-mensaje {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin: 10px 0px;
-    height: 80px;
-    font-size: 18px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin: 10px 0px;
+  height: 80px;
+  font-size: 18px;
 }
 
 .formulario-contactanos-grupo-label {
-    color: white;
-
-}
-.formulario-contactanos-grupo-input{
-    background-color: transparent;
-    border: 1px solid white;
-    padding: 5px 10px;
-    border-radius: 4px;
-    width: 100%;
-    transition: 0.5s;
+  color: white;
 }
 
-.formulario-contactanos-grupo-input::placeholder{
-    color: white
+.formulario-contactanos-grupo-input {
+  background-color: transparent;
+  border: 1px solid white;
+  padding: 5px 10px;
+  border-radius: 4px;
+  width: 100%;
+  transition: 0.5s;
 }
-
-.formulario-contactanos-grupo-input:focus{
-   border: 2px solid white;
-   outline: none;
+.formulario-contactanos-grupo-input:focus {
+  border: 2px solid white;
+  outline: none;
+}
+.formulario-contactanos-grupo-input::-moz-placeholder {
+  color: white;
+}
+.formulario-contactanos-grupo-input::placeholder {
+  color: white;
 }
 
 .formulario-contactanos-boton {
-    width: 100%;
-    background-color: white;
-    color: #c69c6d;
-    border: 1px solid white;
-    border-radius: 4px;
-    padding: 10px 5px;
-    font-size: 18px;
-}
-.formulario-contactanos label.terminos {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    justify-content: center;
-    margin-top: 20px;
-    color: white;
-}
-
-.formulario-contactanos label.terminos input[type="checkbox"] {
-    margin-right: 10px;
-    border-radius: 5px;
-    background-color: transparent;
-    border: 1px solid white;
+  width: 100%;
+  background-color: white;
+  color: #c69c6d;
+  border: 1px solid white;
+  border-radius: 4px;
+  padding: 10px 5px;
+  font-size: 18px;
 }
 
 .contenidoNosotros {
-    width: 100%;
-    display: block;
-    justify-content: space-around;
-
+  width: 100%;
+  display: block;
+  justify-content: space-around;
 }
 
 .tituloNosotros {
-    padding: 20px;
-    color: #c69c6d;
-    font-size: 20px;
-    text-align: center;
-    font-family: Montserrat;
+  padding: 20px;
+  color: #c69c6d;
+  font-size: 20px;
+  text-align: center;
+  font-family: Montserrat;
 }
 
 .bajada-landingsNosotros {
-    color: #c69c6d;
-    font-size: 18px;
-    font-family: Montserrat;
-    background-color: white;
-    text-align: center;
-    padding: 2px;
-
+  color: #c69c6d;
+  font-size: 18px;
+  font-family: Montserrat;
+  background-color: white;
+  text-align: center;
+  padding: 2px;
 }
 
 .video-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 400px;
-    overflow: hidden;
-    padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 400px;
+  overflow: hidden;
+  padding: 20px;
 }
 
 .video {
-    width: 40%;
-    height: 100%;
+  width: 40%;
+  height: 100%;
 }
 
-
 .galeria {
-    width: 80%;
-    margin: auto;
-    padding: 30px;
-    display: grid;
-    gap: 25px;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(6, 190px);
-    grid-template-areas: "img4 img1 img1 img2"
-        "img4 img1 img1 img2"
-        "img4 img3 img3 img2"
-        "img4 img3 img3 img2"
-        "img5 img5 img6 img6"
-        "img5 img5 img6 img6";
+  width: 80%;
+  margin: auto;
+  padding: 30px;
+  display: grid;
+  gap: 25px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(6, 190px);
+  grid-template-areas: "img4 img1 img1 img2" "img4 img1 img1 img2" "img4 img3 img3 img2" "img4 img3 img3 img2" "img5 img5 img6 img6" "img5 img5 img6 img6";
+}
+.galeria img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
 }
 
 .img1 {
-    grid-area: img1;
+  grid-area: img1;
 }
 
 .img2 {
-    grid-area: img2;
+  grid-area: img2;
 }
 
 .img3 {
-    grid-area: img3;
+  grid-area: img3;
 }
 
 .img4 {
-    grid-area: img4;
+  grid-area: img4;
 }
 
 .img5 {
-    grid-area: img5;
+  grid-area: img5;
 }
 
 .img6 {
-    grid-area: img6;
+  grid-area: img6;
 }
-
-.galeria img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-
-
-
-
-
 
 .titulo2 {
-    color: gray;
-    font-size: 18px;
-    text-align: center;
-    font-family: Montserrat;
-
+  color: gray;
+  font-size: 18px;
+  text-align: center;
+  font-family: Montserrat;
 }
 
-
 .bajada-landings-enviosypedidos {
-
-    font-size: 18px;
-    font-family: Montserrat;
-    background-color: white;
-    padding: 50px;
-    text-align: center;
-    padding: 20px 150px 50px 150px; 
-    margin-top: 30px;
-    margin-bottom: 30px;
-    max-width: 100%;
-    color: #c69c6d;
+  font-size: 18px;
+  font-family: Montserrat;
+  background-color: white;
+  padding: 50px;
+  text-align: center;
+  padding: 20px 150px 50px 150px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  max-width: 100%;
+  color: #c69c6d;
 }
 
 .parrafos-envios {
-    margin-top: 15px;
-    margin-bottom: 15px;
-    max-width: 100%;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  max-width: 100%;
 }
-
-
 
 @media (max-width: 1024px) {
-    .titulo-linea-1 {
-        font-size: 16px;
-    }
-
-    .titulo2 {
-        font-size: 16px;
-    }
-
-    .titulo3 {
-        font-size: 16px;
-    }
-
-    .tituloContactanos {
-        font-size: 16px;
-    }
-
-    .tituloNosotros {
-        font-size: 16px;
-    }
-
-    .navegador-links {
-        font-size: 15px;
-    }
-
-    .navegador-links2 {
-        font-size: 15px;
-    }
-
-    .bajada {
-        font-size: 14px;
-    }
-
-    .bajada-landingsNosotros {
-        font-size: 14px;
-    }
-
-    .bajada-landings-enviosypedidos {
-        font-size: 14px;
-    }
-
-    .bajada-landings-contactanos {
-        font-size: 14px;
-    }
-
-    .formulario-contactanos {
-        font-size: 14px;
-    }
-
-    .footer {
-        font-size: 14px;
-    }
-
-    .footerText {
-        font-size: 14px;
-    }
-
-    .galeria {
-        width: 100%;
-        padding: 5px;
-        gap: 10px;
-    }
+  .titulo-linea-1 {
+    font-size: 16px;
+  }
+  .titulo2 {
+    font-size: 16px;
+  }
+  .titulo3 {
+    font-size: 16px;
+  }
+  .tituloContactanos {
+    font-size: 16px;
+  }
+  .tituloNosotros {
+    font-size: 16px;
+  }
+  .navegador-links {
+    font-size: 15px;
+  }
+  .navegador-links2 {
+    font-size: 15px;
+  }
+  .bajada {
+    font-size: 14px;
+  }
+  .bajada-landingsNosotros {
+    font-size: 14px;
+  }
+  .bajada-landings-enviosypedidos {
+    font-size: 14px;
+  }
+  .bajada-landings-contactanos {
+    font-size: 14px;
+  }
+  .formulario-contactanos {
+    font-size: 14px;
+  }
+  .footer {
+    font-size: 14px;
+  }
+  .footerText {
+    font-size: 14px;
+  }
+  .galeria {
+    width: 100%;
+    padding: 5px;
+    gap: 10px;
+  }
 }
-
 @media (max-width: 768px) {
-    .titulo-linea-1 {
-        font-size: 15px;
-    }
-
-    .titulo2 {
-        font-size: 15px;
-    }
-
-    .titulo3 {
-        font-size: 15px;
-    }
-
-    .tituloContactanos {
-        font-size: 15px;
-    }
-
-    .tituloNosotros {
-        font-size: 15px;
-    }
-
-    .navegador-links {
-        font-size: 14px;
-    }
-
-    .navegador-links2 {
-        font-size: 14px;
-    }
-
-    .bajada {
-        font-size: 13px;
-    }
-
-    .bajada-landingsNosotros {
-        font-size: 13px;
-    }
-
-    .bajada-landings-enviosypedidos {
-        font-size: 13px;
-    }
-
-    .bajada-landings-contactanos {
-        font-size: 13px;
-    }
-
-    .formulario-contactanos {
-        font-size: 13px;
-    }
-
-    .footer {
-        font-size: 13px;
-    }
-
-    .footerText {
-        font-size: 13px;
-    }
-
-    .galeria {
-        width: 100%;
-        padding: 5px;
-        gap: 5px;
-    }
-}
+  .titulo-linea-1 {
+    font-size: 15px;
+  }
+  .titulo2 {
+    font-size: 15px;
+  }
+  .titulo3 {
+    font-size: 15px;
+  }
+  .tituloContactanos {
+    font-size: 15px;
+  }
+  .tituloNosotros {
+    font-size: 15px;
+  }
+  .navegador-links {
+    font-size: 14px;
+  }
+  .navegador-links2 {
+    font-size: 14px;
+  }
+  .bajada {
+    font-size: 13px;
+  }
+  .bajada-landingsNosotros {
+    font-size: 13px;
+  }
+  .bajada-landings-enviosypedidos {
+    font-size: 13px;
+  }
+  .bajada-landings-contactanos {
+    font-size: 13px;
+  }
+  .formulario-contactanos {
+    font-size: 13px;
+  }
+  .footer {
+    font-size: 13px;
+  }
+  .footerText {
+    font-size: 13px;
+  }
+  .galeria {
+    width: 100%;
+    padding: 5px;
+    gap: 5px;
+  }
+} /*# sourceMappingURL=style.css.map */
