--- a/style.scss
+++ b/style.scss
@@ -37,8 +37,6 @@ footer {
 
 
 
-
-
 @media (max-width: 1024px) {
   .titulo-linea-1 {
     font-size: 16px;
@@ -72,6 +70,7 @@ footer {
   }
   .bajada-landings-contactanos {
     font-size: 14px;
+    padding: 18px;
   }
   .formulario-contactanos {
     font-size: 14px;
@@ -87,6 +86,11 @@ footer {
     padding: 5px;
     gap: 10px;
   }
+  .video {
+    width: 100%;
+    padding: 1px;
+  }
+
 }
 @media (max-width: 768px) {
   .titulo-linea-1 {
@@ -121,6 +125,7 @@ footer {
   }
   .bajada-landings-contactanos {
     font-size: 13px;
+    padding: 10px;
   }
   .formulario-contactanos {
     font-size: 13px;
@@ -136,4 +141,66 @@ footer {
     padding: 5px;
     gap: 5px;
   }
-}/*# sourceMappingURL=style.css.map */
+  .video {
+    width: 100%;
+    padding: 1px;
+  }
+  
+}
+
+@media (max-width: 420px) {
+  .titulo-linea-1 {
+    font-size: 15px;
+  }
+  .titulo2 {
+    font-size: 15px;
+  }
+  .titulo3 {
+    font-size: 15px;
+  }
+  .tituloContactanos {
+    font-size: 15px;
+  }
+  .tituloNosotros {
+    font-size: 15px;
+  }
+  .navegador-links {
+    font-size: 14px;
+  }
+  .navegador-links2 {
+    font-size: 14px;
+  }
+  .bajada {
+    font-size: 13px;
+  }
+  .bajada-landingsNosotros {
+    font-size: 15px;
+  }
+  .bajada-landings-enviosypedidos {
+    font-size: 13px;
+  }
+  .bajada-landings-contactanos {
+    font-size: 15px;
+    padding: 10px;
+  }
+  .formulario-contactanos {
+    font-size: 11px;
+  }
+  .footer {
+    font-size: 13px;
+  }
+  .footerText {
+    font-size: 13px;
+  }
+  .galeria {
+    width: 100%;
+    padding: 5px;
+    gap: 5px;
+  }
+  .video {
+    width: 100%;
+    padding: 1px;
+  }
+  
+}
+/*# sourceMappingURL=style.css.map */
