--- a/scss/_contactanos.scss
+++ b/scss/_contactanos.scss
@@ -9,6 +9,15 @@
     font-size: 20px;
     text-align: center;
     font-family: Montserrat;
+    @media (max-width: 1024px){
+      font-size: 16px;
+  }
+  @media (max-width: 768px){
+    font-size: 15px;
+  }
+  @media (max-width: 420px){
+      font-size: 14px;
+    }
   }
   
   .bajada-landings-contactanos {
@@ -19,5 +28,17 @@
     padding: 10px 200px 30px 200px;
     text-align: center;
     max-width: 100%;
+        @media (max-width: 1024px){
+          font-size: 14px;
+          padding: 18px;
+        }
+  @media (max-width: 768px){
+    font-size: 13px;
+    padding: 10px;
+  }
+  @media (max-width: 420px){
+    font-size: 15px;
+    padding: 10px;
+  }
   }
   
