--- a/scss/_formulariocontactanos.scss
+++ b/scss/_formulariocontactanos.scss
@@ -22,6 +22,15 @@
       background-color: transparent;
       border: 1px solid white;
     }
+    @media (max-width: 1024px){
+      font-size: 14px;
+    }
+@media (max-width: 768px){
+font-size: 13px;
+}
+@media (max-width: 420px){
+font-size: 11px;
+}
   }
   
   .formulario-contactanos-grupo {
