--- a/scss/_imagenfondocontexto.scss
+++ b/scss/_imagenfondocontexto.scss
@@ -16,4 +16,13 @@
     font-family: Montserrat;
     background-color: #f6d6d6;
     padding: 5px;
+    @media (max-width: 1024px){
+      font-size: 14px;
+    }
+@media (max-width: 768px){
+font-size: 13px;
+}
+@media (max-width: 420px){
+font-size: 13px;
+}
   }
