--- a/scss/_lineaheader.scss
+++ b/scss/_lineaheader.scss
@@ -5,13 +5,22 @@
     padding: 8px;
   }
   
-  .titulo-linea-1 {
+  .titulo-linea-1{
     width: 100%;
     color: white;
-    font-size: 18px;
+    font-size: 20px;
     background-color: #f6d6d6;
     text-align: center;
     font-weight: lighter;
     font-family: "Montserrat";
     text-shadow: #474747 2px 2px 2px, 2px 2px 5px rgba(206, 89, 55, 0);
+    @media (max-width: 1024px){
+        font-size: 16px;
+    }
+    @media (max-width: 768px){
+      font-size: 15px;
+    }
+    @media (max-width: 420px){
+        font-size: 15px;
+      }
   }
