--- a/scss/_navegador.scss
+++ b/scss/_navegador.scss
@@ -15,6 +15,15 @@
     display: flex;
     justify-content: left;
     padding: 5px;
+    @media (max-width: 1024px){
+      font-size: 15px;
+  }
+  @media (max-width: 768px){
+    font-size: 14px;
+  }
+  @media (max-width: 420px){
+      font-size: 14px;
+    }
   }
   
   .navegador-link {
@@ -61,4 +70,23 @@
     background-color: #f6d6d6;
     display: flex;
     justify-content: center;
+    @media (max-width: 1024px){
+      font-size: 15px;
+  }
+  @media (max-width: 768px){
+    font-size: 14px;
+  }
+  @media (max-width: 420px){
+      font-size: 14px;
+    }
+  }
+  
+  .navegador-link {
+    padding: 1px;
+    a {
+        display: block;
+        padding: 5px;
+        text-decoration: none;
+        color: gray;
+      }
   }
